// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render does not call render multiple times for mounted component 1`] = `
<body>
  <div>
    Function
  </div>
</body>
`;

exports[`render renders array 1`] = `
<body>
  <div>
    <div>
      Div
    </div>
    Text
    <span>
      Span
    </span>
    <div>
      Div
    </div>
    Text
    <span>
      Span
    </span>
    <div>
      Div
    </div>
    Text
    <span>
      Span
    </span>
  </div>
</body>
`;

exports[`render renders component with attributes 1`] = `
<body>
  <div
    classname="class"
    id="id"
    style="css-property: value; other-property: 1234"
  >
    Attributes
  </div>
</body>
`;

exports[`render renders fragment 1`] = `
<body>
  <div>
    Div
  </div>
  Text
  <span>
    Span
  </span>
</body>
`;

exports[`render renders function component 1`] = `
<body>
  <div>
    Function
  </div>
</body>
`;

exports[`render renders function component with children 1`] = `
<body>
  <div>
    <span>
      Function
    </span>
    <span>
      Children
    </span>
  </div>
</body>
`;

exports[`render renders hello world 1`] = `
<body>
  <div>
    HELLO WORLD!
  </div>
</body>
`;
